--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="space-y-4">
                 <button 
                     class="hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition duration-200 w-full" 
-                    onclick="launchGame('LG/Labyrinthe.html')">
+                    onclick="launchGame('neocities-labyrinthe/LG/Labyrinthe.html')">
                     Labyrinthe
                 </button>
                 <button 
