--- a/neocities-labyrinthe/LG/Labyrinthe.html
+++ b/neocities-labyrinthe/LG/Labyrinthe.html
@@ -6,7 +6,7 @@
     <title>Menu Principal</title>
     <style>
     body {
-      font-size: 16px;display: flex;justify-content: center;align-items: center;flex-direction: column;height: 100vh;margin: 0; background-image: url('neocities-labyrinthe/ppL/fond.WebP');background-size: cover; /* L'image couvre tout l'espace disponible */background-position: center; /* Centre l'image */
+      font-size: 16px;display: flex;justify-content: center;align-items: center;flex-direction: column;height: 100vh;margin: 0; background-image: url('ppL/fond.WebP');background-size: cover; /* L'image couvre tout l'espace disponible */background-position: center; /* Centre l'image */
   }
   
   .menu-container {
