--- a/index.html
+++ b/index.html
@@ -20,72 +20,72 @@
                 <button 
                     class="hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition duration-200 w-full" 
                     onclick="launchGame('game2.html')">
-                    aucun
+                    none
                 </button>
                 <button 
                     class="hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition duration-200 w-full" 
                     onclick="launchGame('game3.html')">
-                    aucun
+                    none
                 </button>
                 <button 
                     class="hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition duration-200 w-full" 
                     onclick="launchGame('game3.html')">
-                    aucun
+                    none
                 </button>
                 <button 
                     class="hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition duration-200 w-full" 
                     onclick="launchGame('game3.html')">
-                    aucun
+                    none
                 </button>
                  <button 
                     class="hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition duration-200 w-full" 
                     onclick="launchGame('game3.html')">
-                    aucun
+                    none
                 </button>
                 <button 
                     class="hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition duration-200 w-full" 
                     onclick="launchGame('game3.html')">
-                    aucun
+                    none
                 </button>
                 <button 
                     class="hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition duration-200 w-full" 
                     onclick="launchGame('game3.html')">
-                    aucun
+                    none
                 </button>
                  <button 
                     class="hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition duration-200 w-full" 
                     onclick="launchGame('game2.html')">
-                    aucun
+                    none
                 </button>
                 <button 
                     class="hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition duration-200 w-full" 
                     onclick="launchGame('game3.html')">
-                    aucun
+                    none
                 </button>
                 <button 
                     class="hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition duration-200 w-full" 
                     onclick="launchGame('game3.html')">
-                    aucun
+                    none
                 </button>
                 <button 
                     class="hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition duration-200 w-full" 
                     onclick="launchGame('game3.html')">
-                    aucun
+                    none
                 </button>
                  <button 
                     class="hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition duration-200 w-full" 
                     onclick="launchGame('game3.html')">
-                    aucun
+                    none
                 </button>
                 <button 
                     class="hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition duration-200 w-full" 
                     onclick="launchGame('game3.html')">
-                    aucun
+                    none
                 </button>
                 <button 
                     class="hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition duration-200 w-full" 
                     onclick="launchGame('game3.html')">
-                    aucun
+                    none
                 </button>
             </div>
         </div>
