--- a/LG/Labyrinthe.html
+++ b/LG/Labyrinthe.html
@@ -38,7 +38,7 @@
         <h1>Labyrinthe</h1>
         <button onclick="location.href='solo.html'">play 1 player</button>
         <button onclick="location.href='multiVG.html'">play 2 player</button>
-        <button onclick="location.href='option.html'">option</button> //none
+        <button onclick="location.href='option.html'">...</button> 
     </div>
 </body>
 </html>
