--- a/LG/Labyrinthe.html
+++ b/LG/Labyrinthe.html
@@ -6,22 +6,22 @@
     <title>Menu Principal</title>
     <style>
     body {
-      font-size: 16px;display: flex;justify-content: center;align-items: center;flex-direction: column;height: 100vh;margin: 0; background-image: url('ppL/fond.WebP');background-size: cover; /* L'image couvre tout l'espace disponible */background-position: center; /* Centre l'image */
+      font-size: 16px;display: flex;align-items: center;flex-direction: column;height: 100vh;margin: 0; background-image: url('ppL/fond.WebP');background-size: cover; /* L'image couvre tout l'espace disponible */background-position: center ; /* Centre l'image */
   }
   
   .menu-container {
-      display: flex;flex-direction: column;gap: 20px;
+      display: flex;flex-direction: column;gap: 2em;
       
   }
   
   h1 {
-      font-size: 48px; margin-bottom: 20px;color: #000;
+      font-size: 70px; margin-bottom: 1em;color: #000;
   }
   
   button {
     
     background: #444;
-            font-size: 25px;
+            font-size: 30px;
             border-radius: 5px;
             cursor: pointer;
             left: 50px;
