--- a/LG/Labyrinthe.html
+++ b/LG/Labyrinthe.html
@@ -56,7 +56,7 @@
         <h1>Labyrinthe</h1>
         <button onclick="location.href='solo.html'">play solo</button>
         <button onclick="location.href='multiVG.html'">play 2 player</button>
-        <button onclick="location.href='solo.html'">option</button>
+        <button onclick="location.href='solo.html'">...</button>
         
     </div>
 </body>
