--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </button>
                 <button 
                     class="hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition duration-200 w-full" 
-                    onclick="launchGame('game2.html')">
+                    onclick="launchGame('GM.html')">
                     none
                 </button>
                 <button 
