--- a/LG/multiVG.html
+++ b/LG/multiVG.html
@@ -123,6 +123,7 @@
         }
 
         // Algorithme de Flood Fill pour s'assurer que toutes les cases sont accessibles
+        accessibles
         function floodFill(maze, startX, startY) {
             const stack = [[startX, startY]];
             const visited = Array.from({ length: mazeHeight }, () => Array(mazeWidth).fill(false));
