--- a/LG/solo.html
+++ b/LG/solo.html
@@ -116,14 +116,50 @@
         let enemyCounter = 0;
 
         function generateMaze() {
-            const maze = Array.from({ length: mazeHeight }, () => 
-                Array.from({ length: mazeWidth }, () => Math.random() > 0.3 ? 0 : 1)
-            );
+            const maze = [];
+            for (let y = 0; y < mazeHeight; y++) {
+                maze[y] = [];
+                for (let x = 0; x < mazeWidth; x++) {
+                    maze[y][x] = Math.random() > 0.3 ? 0 : 1;
+                }
+            }
             maze[1][1] = 0;
-            maze[mazeHeight - 2][mazeWidth - 2] = 0;
+            floodFill(maze, 1, 1);  // S'assurer qu'il y a un chemin accessible
             return maze;
         }
 
+        // Algorithme de Flood Fill pour s'assurer que toutes les cases sont accessibles
+        function floodFill(maze, startX, startY) {
+            const stack = [[startX, startY]];
+            const visited = Array.from({ length: mazeHeight }, () => Array(mazeWidth).fill(false));
+            visited[startY][startX] = true;
+
+            while (stack.length > 0) {
+                const [x, y] = stack.pop();
+
+                // Directions
+                const directions = [[-1, 0], [1, 0], [0, -1], [0, 1]];
+
+                directions.forEach(([dx, dy]) => {
+                    const nx = x + dx;
+                    const ny = y + dy;
+
+                    if (nx >= 0 && ny >= 0 && nx < mazeWidth && ny < mazeHeight && !visited[ny][nx] && maze[ny][nx] === 0) {
+                        visited[ny][nx] = true;
+                        stack.push([nx, ny]);
+                    }
+                });
+            }
+
+            // Assurer que toutes les cases accessibles sont ouvertes
+            for (let y = 0; y < mazeHeight; y++) {
+                for (let x = 0; x < mazeWidth; x++) {
+                    if (visited[y][x] === false) {
+                        maze[y][x] = 1;
+                    }
+                }
+            }
+        }
         function generateEnemies() {
             const enemies = [];
             while (enemies.length < numberOfEnemies) {
