--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <button 
                     class="hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition duration-200 w-full" 
                     onclick="launchGame('3D/3D.html')">
-                    none
+                    3D jump
                 </button>
                 <button 
                     class="hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition duration-200 w-full" 
