--- a/3D/3D.html
+++ b/3D/3D.html
@@ -4,7 +4,14 @@
     <title></title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
-    <link type="text/css" rel="stylesheet" href="main.css" />
+    <style>margin: 0;
+	background-color: #000;
+	color: #fff;
+	font-family: Monospace;
+	font-size: 13px;
+	line-height: 24px;
+	overscroll-behavior: none;
+</style>
   </head>
   <body>
     
