--- a/3D/3D.html
+++ b/3D/3D.html
@@ -4,17 +4,18 @@
     <title></title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
-    <style>margin: 0;
+    
+  </head>
+  <body>
+    <style>body {
+	margin: 0;
 	background-color: #000;
 	color: #fff;
 	font-family: Monospace;
 	font-size: 13px;
 	line-height: 24px;
 	overscroll-behavior: none;
-</style>
-  </head>
-  <body>
-    
+}</style>
     <div id="container"></div>
 	<script type="importmap">
 		{
