--- a/LG/Labyrinthe.html
+++ b/LG/Labyrinthe.html
@@ -51,7 +51,7 @@
 <body>
     
                     
-        <button onclick="location.href='/test/index.html'"class="return-button">Launcher</button>     
+        <button onclick="location.href='/test/'"class="return-button">Launcher</button>     
         <div class="menu-container">
         <h1>Labyrinthe</h1>
         <button onclick="location.href='solo.html'">play solo</button>
