--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
                     onclick="launchGame('LG/Labyrinthe.html')">
                     maze
                 </button>
-                    
+            <button 
+                    class="hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition duration-200 w-full" 
+                    onclick="launchGame('minG.html')">
+                    tic tac toe 
+                </button>       
             
             </div>
         </div>
