--- a/minG.html
+++ b/minG.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-      * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
 * {
+    -webkit-box-sizing: border-box;
+    -webkit-margin: 0;
+    -webkit-padding: 0;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -159,7 +158,8 @@ td {
     .form__field {
         font-size: 5vmin;
     }
-}}
+}
+
 
 
     </style>
