--- a/minG.html
+++ b/minG.html
@@ -21,7 +21,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     min-height: 100vh;
     padding: 10px;
     overflow: hidden;
@@ -137,26 +137,6 @@ td {
         font-size: 5vmin;
         width: 90%;
         max-width: 250px;
-    }
-}
-
-/* 📌 Mobile - pour écrans plus petits */
-@media screen and (max-width: 600px) {
-    table {
-        width: 80vmin;
-        height: 80vmin;
-    }
-
-    td {
-        font-size: 12vmin;
-    }
-
-    .button {
-        font-size: 5vmin;
-    }
-
-    .form__field {
-        font-size: 5vmin;
     }
 }
 
