--- a/miniGAME/dropGAME.html
+++ b/miniGAME/dropGAME.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimal-ui">
+    <meta name="apple-mobile-web-app-capable" content="yes"> <!-- Pour désactiver la possibilité de zoom sur les appareils Apple -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Jeu de Saut</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -11,6 +13,11 @@
             overflow: hidden; 
             text-align: center; 
             font-family: Arial, sans-serif; 
+            -webkit-user-select: none; /* Désactive la sélection de texte */
+            -moz-user-select: none;    /* Désactive la sélection de texte */
+            -ms-user-select: none;     /* Désactive la sélection de texte */
+            user-select: none;         /* Désactive la sélection de texte */
+            touch-action: none;        /* Désactive le zoom et le défilement tactile */
         }
         #gameCanvas { display: block; margin: auto; }
         h1, p { color: white; }
