--- a/miniGAME/dropGAME.html
+++ b/miniGAME/dropGAME.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimal-ui">
-    <meta name="apple-mobile-web-app-capable" content="yes"> <!-- Désactiver le zoom sur les appareils Apple -->
+    <meta name="apple-mobile-web-app-capable" content="no"> <!-- Désactiver le zoom sur les appareils Apple -->
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Jeu de Saut</title>
     <style>
