--- a/index.html
+++ b/index.html
@@ -26,13 +26,8 @@
                 </button>
                 <button 
                     class="hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition duration-200 w-full" 
-                    onclick="launchGame('miniGAME/TTT.html')">
-                    tic tac toe 
-                </button>
-                <button 
-                    class="hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition duration-200 w-full" 
-                    onclick="launchGame('miniGAME/dropGAME.html')">
-                    drop game
+                    onclick="launchGame('miniGAME/miniGAME.html')">
+                    mini GAME
                 </button>
             </div>
         </div>
