--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
                 </button>
                 <button 
                     class="hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition duration-200 w-full" 
-                    onclick="launchGame('miniGAME/miniGAME.html')">
-                    mini GAME
+                    onclick="redirectToWebsite()">
+                    Multi
+                    
                 </button>
             </div>
         </div>
@@ -36,6 +37,9 @@
     <script>
         function launchGame(gameUrl) {
             window.location.href = gameUrl;
+        }
+        function redirectToWebsite() {
+            window.location.href = "https://multi-1nyd.onrender.com/";
         }
     </script>
 
