--- a/index.html
+++ b/index.html
@@ -9,7 +9,25 @@
   body {
     margin: 0;font-family: Monospace;font-size: 13px;line-height: 24px;overscroll-behavior: none;
   }
+  
+    #top-right-button {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      z-index: 1000;
+      padding: 10px 20px;
+      background: rgba(0, 0, 0, 0.7);
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-weight: bold;
+    }
   </style>
+  
+  <button id="top-right-button" onclick="window.location.href='https://multi-1nyd.onrender.com'">
+    multiplayer
+  </button>
   </head>
   <body>
   <div id="container"></div>
